--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -16,6 +16,27 @@
   <body class="">
     <div class="border-b border-gray-100">
       <div class="mx-auto max-w-screen-lg p-4 py-8">
+        <div class="float-right flex space-x-3">
+          <%= link_to 'https://www.spinacms.com', class: 'flex items-center p-3' do %>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="currentColor" class="w-5 h-5 mr-2 text-gray-400"
+	 viewBox="0 0 512 512">
+              <g>
+              	<path d="M393.5,56h-275c-3.1,0-6.1,1.6-7.8,4.2l-78.1,115c-2.3,3.4-2,8,0.5,11.1l215.6,266.3c3.8,4.6,10.8,4.6,14.5,0l215.6-266.3
+              		c2.6-3.2,2.8-7.7,0.5-11.1l-78-115C399.6,57.5,396.7,56,393.5,56z M378.4,93.5l49.5,75h-53.4l-40.4-75H378.4L378.4,93.5z
+              		 M220.5,93.5h70.9l40.4,75H180.2L220.5,93.5z M133.6,93.5H178l-40.4,75H84.1L133.6,93.5z M100,206h40.2l53.4,125L100,206z
+              		 M180.4,206h151.3L256,396.1L180.4,206L180.4,206z M318.5,331l53.3-125h40.2L318.5,331z"/>
+              </g>
+            </svg>
+
+            <span class="text-sm font-medium text-gray-400 hover:text-indigo-400">Spina CMS</span>
+          <% end %>
+          
+          <%= link_to 'https://twitter.com/BramJetten', class: 'flex items-center p-3' do %>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5 text-blue-400 mr-2" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
+            <span class="text-sm font-medium text-gray-400 hover:text-blue-400">@BramJetten</span>
+          <% end %>
+        </div>
+          
         <div class="flex items-center">
           <%= image_tag 'bram.jpg', alt: "Bram Jetten", class: 'rounded-lg w-20 mr-8' %>
           
@@ -33,28 +54,6 @@
                 <% end %>
               </ul>
             </nav>
-          </div>
-          <div class="flex-1"></div>
-          
-          <div class="flex items-center space-x-3">
-            <%= link_to 'https://www.spinacms.com', class: 'flex items-center p-3' do %>
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="currentColor" class="w-5 h-5 mr-2 text-gray-400"
-  	 viewBox="0 0 512 512">
-  <g>
-  	<path d="M393.5,56h-275c-3.1,0-6.1,1.6-7.8,4.2l-78.1,115c-2.3,3.4-2,8,0.5,11.1l215.6,266.3c3.8,4.6,10.8,4.6,14.5,0l215.6-266.3
-  		c2.6-3.2,2.8-7.7,0.5-11.1l-78-115C399.6,57.5,396.7,56,393.5,56z M378.4,93.5l49.5,75h-53.4l-40.4-75H378.4L378.4,93.5z
-  		 M220.5,93.5h70.9l40.4,75H180.2L220.5,93.5z M133.6,93.5H178l-40.4,75H84.1L133.6,93.5z M100,206h40.2l53.4,125L100,206z
-  		 M180.4,206h151.3L256,396.1L180.4,206L180.4,206z M318.5,331l53.3-125h40.2L318.5,331z"/>
-  </g>
-  </svg>
-  
-              <span class="text-sm font-medium text-gray-400 hover:text-indigo-400">Spina CMS</span>
-            <% end %>
-            
-            <%= link_to 'https://twitter.com/BramJetten', class: 'flex items-center p-3' do %>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5 text-blue-400 mr-2" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
-              <span class="text-sm font-medium text-gray-400 hover:text-blue-400">@BramJetten</span>
-            <% end %>
           </div>
         </div>
       </div>
