--- a/app/views/default/pages/articles.html.erb
+++ b/app/views/default/pages/articles.html.erb
@@ -1,7 +1,7 @@
-<ul class="border-t border-gray-100">
+<ul class="">
   <% articles.each do |article| %>
     <li>
-      <%= link_to article.materialized_path, class: "py-3 block border-b border-gray-100 hover:bg-gray-50" do %>
+      <%= link_to article.materialized_path, class: "py-3 block rounded-lg hover:bg-gray-50" do %>
         <span class="text-sm text-gray-400 w-36 inline-block"><%=l article.created_at, format: "%B %e, %Y" %></span>
         <span class="font-medium"><%= article.title %></span>
       <% end %>
