--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -49,7 +49,7 @@
               <ul class="flex -ml-3">
                 <% nav_items.each do |nav_item| %>
                   <li>
-                    <%= link_to nav_item.menu_title, nav_item.materialized_path, class: "px-3 py-2 block font-medium #{(current_page.materialized_path.starts_with? nav_item.materialized_path) ? 'text-gray-900' : 'text-gray-400'}" %>
+                    <%= link_to nav_item.menu_title, nav_item.materialized_path, class: "px-3 py-2 block font-medium hover:text-gray-900 #{(current_page.materialized_path.starts_with? nav_item.materialized_path) ? 'text-gray-900' : 'text-gray-400'}" %>
                   </li>
                 <% end %>
               </ul>
