--- a/app/views/default/pages/articles.html.erb
+++ b/app/views/default/pages/articles.html.erb
@@ -1,3 +1,7 @@
+<div class="mb-12 text-gray-700">
+  Sometimes I write stuff. Here's a list of things I wrote about.
+</div>
+
 <ul class="">
   <% articles.each do |article| %>
     <li>
