--- a/app/views/default/pages/articles.html.erb
+++ b/app/views/default/pages/articles.html.erb
@@ -1,15 +1,19 @@
-<div class="mb-12 text-gray-700">
-  Sometimes I write stuff. Here's a list of things I wrote about.
+<div class="mb-3 md:mb-12 prose">
+  <%= content.html :body %>
 </div>
 
-<ul class="">
+<ul>
   <% articles.each do |article| %>
     <li>
-      <%= link_to article.materialized_path, class: "py-3 block hover:bg-gray-50 -mx-4 px-4 rounded-lg" do %>
-        <div class="text-sm text-gray-400 font-medium"><%=l article.created_at, format: "%B %e, %Y" %></div>
-        <span class="font-extrabold text-lg"><%= article.title %></span>
-        <div class="text-sm ">
-          <%= strip_tags article.content(:text).truncate(150) %>
+      <%= link_to article.materialized_path, class: "py-3 block hover:bg-gray-50 -mx-4 px-4 md:rounded-lg" do %>
+        <span class="font-extrabold text-lg">
+          <%= article.title %>
+        </span>
+        <div class="text-sm">
+          <%= strip_tags article.description.to_s.truncate(150) %>
+        </div>
+        <div class="text-xs mt-1 text-gray-400">
+          <%=l article.created_at, format: "%B %e, %Y" %>
         </div>
       <% end %>
     </li>
