--- a/app/views/default/shared/_navigation.html.erb
+++ b/app/views/default/shared/_navigation.html.erb
@@ -9,7 +9,7 @@
         Bram Jetten
       <% end %>
       
-      <nav>
+      <nav class="md:mt-1">
         <ul class="flex -ml-3">
           <% nav_items.each do |nav_item| %>
             <li>
