--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title><%= current_page.seo_title %></title>
+    <meta name="description" content="<%= current_page.description %>" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Stylesheets -->
     <%= stylesheet_link_tag "inter-font" %>
