--- a/app/views/default/shared/_navigation.html.erb
+++ b/app/views/default/shared/_navigation.html.erb
@@ -22,7 +22,7 @@
   </div>
   
   <div class="flex md:space-x-3 justify-center absolute md:relative top-4 right-2 md:inset-auto">
-    <%= link_to 'https://www.spinacms.com', class: 'items-center p-2 md:p-3 text-gray-400 hover:text-gray-700 flex' do %>
+    <%= link_to 'https://www.spinacms.com', class: 'items-center p-2 md:p-3 text-gray-400 hover:text-gray-700 flex', target: :blank do %>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 24" class="w-5 h-5 md:mr-2">
         <g fill="none" fill-rule="evenodd">
           <path fill="#685D98" d="M0 8l16 16V8z"/>
@@ -38,7 +38,7 @@
       <span class="text-sm font-medium hidden md:block">Spina CMS</span>
     <% end %>
     
-    <%= link_to 'https://twitter.com/BramJetten', class: 'flex items-center p-2 md:p-3 text-gray-400 hover:text-blue-400' do %>
+    <%= link_to 'https://twitter.com/BramJetten', class: 'flex items-center p-2 md:p-3 text-gray-400 hover:text-blue-400', target: :blank do %>
       <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5 text-blue-400 md:mr-2" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
       <span class="text-sm font-medium hidden md:block">@BramJetten</span>
     <% end %>
