Prose-indigo weg

--- a/app/views/default/pages/article.html.erb
+++ b/app/views/default/pages/article.html.erb
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="prose md:prose-lg prose-indigo clear-right" data-controller="article">
+<div class="prose md:prose-lg clear-right" data-controller="article">
   <%= content.html :body %>
 </div>
 
