--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -8,6 +8,7 @@
     <!-- Stylesheets -->
     <%= stylesheet_link_tag "inter-font" %>
     <%= stylesheet_link_tag "tailwind" %>
+    <%= stylesheet_link_tag "application" %>
     
     <%= csrf_meta_tags %>
     
