--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -12,8 +12,7 @@
     
     <%= csrf_meta_tags %>
     
-    <%= turbo_include_tags %>
-    <%= stimulus_include_tags %>
+    <%= javascript_importmap_tags %>
     
     <%= render 'default/shared/analytics' %>
   </head>
