--- a/app/views/default/shared/_header.html.erb
+++ b/app/views/default/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="border-b border-gray-100">
-  <div class="mx-auto max-w-screen-lg p-4 md:py-8">
+  <div class="mx-auto max-w-screen-xl p-4 lg:py-8 lg:px-8">
     <%= render 'default/shared/navigation' %>
   </div>
 </div>
