--- a/app/views/layouts/default/application.html.erb
+++ b/app/views/layouts/default/application.html.erb
@@ -20,7 +20,7 @@
   <body>
     <%= render 'default/shared/header' %>
     
-    <div class="mx-auto max-w-screen-lg py-4 md:py-20 px-4">
+    <div class="mx-auto max-w-screen-md py-4 md:py-20 px-4">
       <%= yield %>
     </div>
   </body>
