Purple spina icon

--- a/app/views/default/shared/_navigation.html.erb
+++ b/app/views/default/shared/_navigation.html.erb
@@ -22,19 +22,11 @@
   </div>
   
   <div class="flex md:space-x-3 justify-center absolute md:relative top-4 right-2 md:inset-auto">
-    <%= link_to 'https://www.spinacms.com', class: 'items-center p-2 md:p-3 text-gray-400 hover:text-gray-700 flex', target: :blank do %>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 24" class="w-5 h-5 md:mr-2">
-        <g fill="none" fill-rule="evenodd">
-          <path fill="#685D98" d="M0 8l16 16V8z"/>
-          <path fill="#6B649C" d="M32 8L16 24V8z"/>
-          <path fill="#8980B2" d="M8 8l8 16 8-16z"/>
-          <path fill="#8278B1" d="M27 0v8H5V0z"/>
-          <path fill="#A9A4CB" d="M8 8l8-8 8 8z"/>
-          <path fill="#7668A6" d="M5 0L0 8h8z"/>
-          <path fill="#8980B2" d="M27 0l5 8h-8z"/>
-        </g>
+    <%= link_to 'https://www.spinacms.com', class: 'items-center p-2 md:p-3 text-gray-400 hover:text-gray-700 flex', target: :blank do %>      
+      <svg viewBox="0 0 100 100" class="h-5 w-5 md:mr-2" style="color: #6766AF" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+        <path d="M48.6582924,96.1623174 L0.472662785,39.1647593 C-0.121452015,38.4619959 -0.159345587,37.4445295 0.380849751,36.699521 L20.3780861,9.12040239 C20.6765111,8.70883071 21.1204689,8.42634978 21.6197077,8.33038495 L49.1629705,3.03595601 C49.3934881,2.99164538 49.6300066,2.9882617 49.8616974,3.02595987 L78.3181435,7.65607741 C78.8410521,7.74115931 79.30884,8.0302376 79.6188319,8.45986224 L99.9955684,36.7004267 C100.533013,37.4452826 100.494021,38.460456 99.9010274,39.1618937 L51.7129756,96.1623174 C50.999859,97.0058449 49.7379497,97.1115638 48.8944223,96.3984473 C48.8092674,96.3264575 48.7302822,96.2474723 48.6582924,96.1623174 Z"></path>
       </svg>
-  
+
       <span class="text-sm font-medium hidden md:block">Spina CMS</span>
     <% end %>
     
