--- a/app/views/default/shared/_navigation.html.erb
+++ b/app/views/default/shared/_navigation.html.erb
@@ -30,9 +30,9 @@
       <span class="text-sm font-medium hidden md:block">Spina CMS</span>
     <% end %>
     
-    <%= link_to 'https://twitter.com/BramJetten', class: 'flex items-center p-2 md:p-3 text-gray-400 hover:text-blue-400', target: :blank do %>
-      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5 text-blue-400 md:mr-2" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
-      <span class="text-sm font-medium hidden md:block">@BramJetten</span>
+    <%= link_to 'https://bsky.app/profile/bramjetten.dev', class: 'flex items-center p-2 md:p-3 text-gray-400 hover:text-blue-400', target: :blank do %>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 530" class="w-5 md:mr-2" version="1.1"><path d="m135.72 44.03c66.496 49.921 138.02 151.14 164.28 205.46 26.262-54.316 97.782-155.54 164.28-205.46 47.98-36.021 125.72-63.892 125.72 24.795 0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.3797-3.6904-10.832-3.7077-7.8964-0.0174-2.9357-1.1937 0.51669-3.7077 7.8964-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.4491-163.25-81.433-5.9562-21.282-16.111-152.36-16.111-170.07 0-88.687 77.742-60.816 125.72-24.795z" fill="#1185fe"/></svg>
+      <span class="text-sm font-medium hidden md:block">@bramjetten.dev</span>
     <% end %>
   </div>
 </div>
