--- a/app/views/default/shared/_navigation.html.erb
+++ b/app/views/default/shared/_navigation.html.erb
@@ -1,7 +1,7 @@
 <div class="md:flex md:items-start md:justify-between">
   <div class="flex items-center">
     <a href="/">
-      <%= image_tag 'bram.jpg', alt: "Bram Jetten", class: 'rounded-lg w-16 md:w-20 mr-4 md:mr-8' %>
+      <%= image_tag 'bram.webp', alt: "Bram Jetten", class: 'rounded-lg w-16 md:w-20 mr-4 md:mr-8' %>
     </a>
     
     <div class="">
